Refactor codebase: update packages, simplify logic, and fix bindings
- 🗑️ Commented out unused converters in `App.xaml`.
- 🔧 Suppressed warning `MVVMTK0045` and updated package versions in `MoreCoffee.csproj`.
- 🎨 Removed `Frame` style in `Styles.xaml`, affecting frame appearance.
- ✨ Simplified `CoffeeGroups` population logic in `MainPageViewModel.cs` and added `OnNavigatedToAsync`.
- 🔗 Fixed `SwipeItem` command binding in `BagOfCoffeePage.xaml` for delete functionality.

--- a/MoreCoffee/MoreCoffee.csproj
+++ b/MoreCoffee/MoreCoffee.csproj
@@ -19,6 +19,7 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<NoWarn>MVVMTK0045</NoWarn>
 
 		<!-- Display name -->
 		<ApplicationTitle>MoreCoffee</ApplicationTitle>
@@ -62,10 +63,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.40" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.2" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
-		<PackageReference Include="Syncfusion.Maui.Charts" Version="28.2.6" />
+		<PackageReference Include="Syncfusion.Maui.Charts" Version="28.2.7" />
 	</ItemGroup>
 
 </Project>
