--- a/MoreCoffee/MoreCoffee.csproj
+++ b/MoreCoffee/MoreCoffee.csproj
@@ -69,4 +69,10 @@
 		<PackageReference Include="Syncfusion.Maui.Charts" Version="28.2.7" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Views\AddCoffeeBagPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
