--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,91 @@ publish/
 Thumbs.db
 ehthumbs.db
 Desktop.ini
+
+# .NET MAUI specific
+.mauipkg/
+.vs/
+.vscode/
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Ww][Ii][Nn]32/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+
+# Visual Studio cache/options directory
+.vs/
+# Uncomment if you have tasks that create the project's static files in wwwroot
+#wwwroot/
+
+# NuGet Packages
+*.nupkg
+# NuGet Symbol Packages
+*.snupkg
+# The packages folder can be ignored because of Package Restore
+**/[Pp]ackages/*
+# except build/, which is used as an MSBuild target.
+!**/[Pp]ackages/build/
+# Uncomment if necessary however generally it will be regenerated when needed
+#!**/[Pp]ackages/repositories.config
+# NuGet v3's project.json files produces more ignorable files
+*.nuget.props
+*.nuget.targets
+
+# User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Mono auto generated files
+mono_crash.*
+
+# Visual Studio cache files
+# files ending in .cache can be ignored
+*.[Cc]ache
+# but keep track of directories ending in .cache
+!?*.[Cc]ache/
+
+# JetBrains Rider
+.idea/
+*.sln.iml
+
+# macOS
+.DS_Store
+
+# MAUI Resource.designer.cs files
+**/*.Android/Resources/Resource.designer.cs
+**/*.iOS/Resources/Resource.designer.cs
+**/*.Windows/Resources/Resource.designer.cs
+
+# Android-specific
+*.apk
+*.aab
+*.ap_
+*.dex
+**/*.Android/[Rr]esources/[Rr]esource.[Dd]esigner.cs
+
+# iOS-specific
+**/*.iOS/obj/
+**/*.iOS/bin/
+**/*.iOS/Resources/*.designer.cs
+
+# Windows-specific
+**/Windows/Package.appxmanifest
+**/*.Windows/bin/
+**/*.Windows/obj/
+
+# Files generated during build
+**/Generated Files/
