--- a/MoreCoffee/Properties/launchSettings.json
+++ b/MoreCoffee/Properties/launchSettings.json
@@ -2,7 +2,9 @@
   "profiles": {
     "Windows Machine": {
       "commandName": "Project",
-      "nativeDebugging": false
+      "nativeDebugging": false,
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
