--- a/MoreCoffee/MoreCoffee.csproj
+++ b/MoreCoffee/MoreCoffee.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
-		<!-- Set Windows as the default target -->
-		<DefaultTargetFramework Condition="$([MSBuild]::IsOSPlatform('windows'))">net9.0-windows10.0.19041.0</DefaultTargetFramework>
+		<!-- Targeting Windows only for simplified development -->
+		<TargetFrameworks>net9.0-windows10.0.19041.0</TargetFrameworks>
+		<!-- Uncomment below to enable cross-platform targets -->
+		<!-- <TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst;net9.0-windows10.0.19041.0</TargetFrameworks> -->
+		<DefaultTargetFramework>net9.0-windows10.0.19041.0</DefaultTargetFramework>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net9.0-tizen</TargetFrameworks> -->
 
